2.34 (0000-00-00)
Application:
- Menu integration support in 64 bit OS X application.
- Settings of 3D view labels are also stored when 3D defaults are saved.

Modules:
- LEXT: Can load colour images; R, G, B are imported as separate channels.
- OLS, LEXT: False colour gradients of colour channels are automatically set to
  RGB-Red, RGB-Green and RGB-Blue.

Other:
- Three new false colour gradients were added RGB-Red, RGB-Green and RGB-Blue,
  representing pure R, G and B channels.


2.33 (2013-10-17)
Application:
- Translations updated: Czech, French, Russian, Spanish.

Libraries:
- libgwyprocess: Speed of tip blind estimate was improved by not reporting
  progress too often.
- libgwyapp: Tools can remember and restore also position of the dialog,
  within one session.
- libgwyapp: Data choosers can be created also for volume data.
- libgwyapp: The data browser provides id lists and thumbnails also for volume
  data.

Modules:
- Zemax (new): Imports Zemax grid sag data files.
- Dimensions and Units: It is possible to set the pixel size to match exactly
  another channel.  Undo warnings were fixed.
- TIA SER: spectral arrays reimplemented as volume data.
- Volume show and extract: Crash for data with unequal resolutions in different
  dimensions was fixed.
- Merge: Pixel size of images created in ‘None’ merge mode correspond to
  pixel size of the merged images.
- Tip blind estimate: Estimate can be made for several horizontal stripes on
  the image and tip radius for each estimated.
- Pixmap: Loading of TIFFs on 64bit MS Windows was disabled because the
  system library crashes.
- IGOR file: Units are correctly derived from channels starting with ‘DAC’.
- GWYXYZF: Compilation on big endian architectures was fixed.
- Arithmetic: Aspect ratio setting of result is taken from the first channel
  used in the expresssion.
- EZD file: Support for 32bit depth was added.


2.32 (2013-09-08)
Application:
- GLib 2.14 is now required.